# forecast-machine-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
data/: sp500_sample.csv  spx_20250213_20250513.csv
forecast-machine-cpp.xcodeproj/: project.pbxproj
forecast-machine-cpp.xcodeproj/project.xcworkspace/xcuserdata/yc.xcuserdatad/: UserInterfaceState.xcuserstate
forecast-machine-cpp.xcodeproj/xcuserdata/yc.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: basic_forecast.hpp  csv_loader.hpp  ewma_forecaster.hpp  forecast_engine.hpp  forecast_runner.hpp  holt_forecaster.hpp  linear_forecaster.hpp  mean_forecaster.hpp
include/dto/: plot_data.hpp  row_data.hpp
include/service/: mysql_service.hpp
include/util/: arg_parser.hpp  arg_spec.hpp  constants.hpp  data_utils.hpp  env_config.hpp  error_evaluator.hpp  forecaster_registry.hpp  sql_manager.hpp
resources/sql/queries/: selectNdqDataByDateRanges.sql  selectSpyDataByDateRanges.sql
resources/sql/schemas/: history_data.sql
scripts/: bootstrap.sh  rebuild.sh  wrapper.sh
src/: basic_forecast.cpp  csv_loader.cpp  csv_manager.cpp  ewma_forecaster.cpp  forecast_runner.cpp  holt_forecaster.cpp  linear_forecaster.cpp  main.cpp  mean_forecaster.cpp
src/dto/: row_data.cpp
src/service/: mysql_service.cpp
src/util/: arg_parser.cpp  csv_manager.cpp  data_utils.cpp  env_config.cpp  error_evaluator.cpp  forecaster_registry.cpp  sql_manager.cpp
